feat: optimize progression and sync dimensions for 3.6.1